# llm-wiki-aicoding

./: .gitignore  README.md  index.md
artifact/02-失败案例分析/: README.md
output/: README.md
output/大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线/: 大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线.md  大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线_pdf.md
output/用 SDD + TDD 驯服 AI：让代码既能「写得快」也能「信得过」/: 用 SDD + TDD 驯服 AI：让代码既能「写得快」也能「信得过」.md
output/知乎课程视频/: README.md  大厂优秀工程师使用AICoding的最新方法与经验.md  大型软件项目的AI开发与AI重构.md
raw/01-SDD+TDD驯服AI可靠编程课程/: README.md  用 SDD + TDD 驯服 AI：让代码既能「写得快」也能「信得过」.md
raw/02-生产级AI安全重构课程/: README.md  大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线.md  大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线_pdf.md
raw/03-AI大型项目重构课程视频/: README.md
raw/Junk-生产级AI重构流程/: 00-生产重构总控.md  01-SDD规格驱动流程.md  02-特征测试与TDD流程.md  03-小步实施流水线.md  04-GitHub管线与门禁.md  README.md
raw/大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线/: 大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线.ipynb  大项目里的 AI：用特征测试做安全重构，用 GitHub 打通协作管线.md
raw/生产级AI安全重构/: README.md
raw/生产级AI安全重构/code/05_github_pipeline/: pyproject.toml
raw/生产级AI安全重构/code/05_github_pipeline/.github/: pull_request_template.md
raw/生产级AI安全重构/code/05_github_pipeline/.github/workflows/: ci.yml
raw/生产级AI安全重构/code/05_github_pipeline/tests/: test_pricing.py
raw/生产级AI重构失败案例/: 德州知识蒸馏.md  重构功能拆解.md
raw/用 SDD + TDD 驯服 AI：让代码既能「写得快」也能「信得过」/: 用 SDD + TDD 驯服 AI：让代码既能「写得快」也能「信得过」.ipynb
wiki/concepts/: README.md  概念-AI质量门禁.md  概念-Agent行为约束.md  概念-SDD规格驱动开发.md  概念-TDD红绿循环.md  概念-上下文工程与活文档.md  概念-特征测试.md
wiki/summaries/: 01_SDD_TDD_驯服AI.md  02_大项目AI安全重构.md  02_大项目里的AI_特征测试与GitHub管线.md  README.md  (+3 more)
(+174 files in other folders)
